FIX: fixed wrong reference to wallpaper

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: sans-serif ;
-	background-image: url("/starsoldweb.gif") ;
+	background-image: url("/gifs/starsoldweb.gif") ;
 	color: #ccc ;
 }
 
